Add validation for Portfolio in LiquidityAccount and refactor save method